--- a/packages.bib
+++ b/packages.bib
@@ -73,6 +73,14 @@ PostScript) and Display (X11 and Win32) Output},
   url = {http://www.rforge.net/Cairo/},
 }
 
+@Manual{R-data.table,
+  title = {data.table: Extension of `data.frame`},
+  author = {Matt Dowle and Arun Srinivasan},
+  year = {2021},
+  note = {R package version 1.14.2},
+  url = {https://CRAN.R-project.org/package=data.table},
+}
+
 @Manual{R-DNAcopy,
   title = {DNAcopy: DNA copy number data analysis},
   author = {Venkatraman E. Seshan and Adam Olshen},
@@ -333,6 +341,22 @@ Vectors)},
 https://link.springer.com/book/10.1007/978-3-319-21416-0},
 }
 
+@Manual{R-metadat,
+  title = {metadat: Meta-Analysis Datasets},
+  author = {Thomas White and Daniel Noble and Alistair Senior and W. Kyle Hamilton and Wolfgang Viechtbauer},
+  year = {2022},
+  note = {R package version 1.2-0},
+  url = {https://github.com/wviechtb/metadat},
+}
+
+@Manual{R-metafor,
+  title = {metafor: Meta-Analysis Package for R},
+  author = {Wolfgang Viechtbauer},
+  year = {2023},
+  note = {R package version 4.2-0},
+  url = {https://CRAN.R-project.org/package=metafor},
+}
+
 @Manual{R-mgcv,
   title = {mgcv: Mixed GAM Computation Vehicle with Automatic Smoothness
 Estimation},
@@ -372,6 +396,14 @@ Estimation},
   year = {2022},
   note = {R package version 3.1-157},
   url = {https://svn.r-project.org/R-packages/trunk/nlme/},
+}
+
+@Manual{R-numDeriv,
+  title = {numDeriv: Accurate Numerical Derivatives},
+  author = {Paul Gilbert and Ravi Varadhan},
+  year = {2019},
+  note = {R package version 2016.8-1.1},
+  url = {http://optimizer.r-forge.r-project.org/},
 }
 
 @Manual{R-plyr,
@@ -436,6 +468,14 @@ tests},
   author = {Anna Diez-Villanueva and Roberto Malinverni and Bernat Gel},
   year = {2022},
   note = {R package version 1.28.0},
+}
+
+@Manual{R-reshape,
+  title = {reshape: Flexibly Reshape Data},
+  author = {Hadley Wickham},
+  year = {2022},
+  note = {R package version 0.8.9},
+  url = {http://had.co.nz/reshape},
 }
 
 @Manual{R-reshape2,
@@ -800,6 +840,17 @@ Ordered Observations)},
   pages = {153--160},
 }
 
+@Article{metafor2010,
+  title = {Conducting meta-analyses in {R} with the {metafor} package},
+  author = {Wolfgang Viechtbauer},
+  journal = {Journal of Statistical Software},
+  year = {2010},
+  volume = {36},
+  number = {3},
+  pages = {1--48},
+  doi = {10.18637/jss.v036.i03},
+}
+
 @Article{mgcv2011,
   title = {Fast stable restricted maximum likelihood and marginal 
 likelihood estimation of semiparametric generalized linear models},
@@ -988,6 +1039,16 @@ likelihood estimation of semiparametric generalized linear models},
   pages = {289-291},
   doi = {10.1093/bioinformatics/btv562},
   pubmed = {26424858},
+}
+
+@Article{reshape2007,
+  author = {Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  number = {12},
+  title = {Reshaping data with the reshape package},
+  url = {https://www.jstatsoft.org/v21/i12/},
+  volume = {21},
+  year = {2007},
 }
 
 @Article{reshape22007,
